# WWClose

./: .editorconfig  CMakeLists.txt  README.md  README_EN.md  TODO.md
cmake/templates/: app.manifest.in  app.rc.in  config.h.in
languages/: en.json  languages.json  zh.json
src/: CMakeLists.txt  focused_window_getter.cpp  focused_window_getter.hpp  language.cpp  language.h  main.cpp
